<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/ic_friends"
            android:title="@string/menu_title_friends" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history"
            android:title="@string/menu_title_history" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_title_settings" />
        <!--<item-->
            <!--android:id="@+id/nav_helpfeedback"-->
            <!--android:icon="@drawable/ic_menu_manage"-->
            <!--android:title="@string/menu_title_helpfeedback" />-->
    </group>
</menu>
