<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDarkTransparent"
    android:orientation="vertical"
    >
    <TextView
        android:id="@+id/title_t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/menu_title_friends"
        android:textAppearance="@style/TextAppearance.AppCompat.Title.Inverse"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:nextFocusDown="@+id/grid_t2"
        />
    <GridLayout
        android:id="@+id/grid_t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="1"
        android:background="@color/colorBackground"
        android:layout_marginTop="@dimen/discover_button_margin"
        android:nextFocusDown="@+id/friend_t2"
        android:contentDescription="@string/friends_grid"
        >
        <LinearLayout
            android:id="@+id/friend_t2"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="@dimen/fab_margin"
            android:nextFocusDown="@+id/friend_more_t2"
            android:contentDescription="@string/friend_line_t2"
            >
            <ImageView
                android:id="@+id/friend_more_t2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more"
                android:tint="@color/colorAccent"
                android:nextFocusDown="@+id/friend_name_t2"
                android:contentDescription="@string/friend_more_t2"
                />
            <TextView
                android:id="@+id/friend_name_t2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/nexus_5_tutorial"
                android:gravity="center_vertical"
                android:textAppearance="@style/MyListItemTextAppearance"
                android:textColor="@color/greyText"
                android:layout_weight="3"
                android:nextFocusDown="@+id/friend_status_t2"
                android:contentDescription="@string/friend_name_t2"
                />
            <TextView
                android:id="@+id/friend_status_t2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/greyText"
                android:text="@string/friend_offline"
                android:contentDescription="@string/friend_status_t2"
                />
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="@dimen/fab_margin"
            android:focusable="false"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more"
                android:tint="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/dave_tutorial"
                android:gravity="center_vertical"
                android:textAppearance="@style/MyListItemTextAppearance"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/friend_online"
                />
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="@dimen/fab_margin"
            android:focusable="false"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more"
                android:tint="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/linda_tutorial"
                android:gravity="center_vertical"
                android:textAppearance="@style/MyListItemTextAppearance"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/colorPrimaryDark"
                android:text="@string/friend_online"
                />
        </LinearLayout>
        <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            android:padding="@dimen/fab_margin"
            android:background="@color/colorBackground"
            android:focusable="false"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/ic_more"
                android:tint="@color/colorAccent"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/jennifer_tutorial"
                android:gravity="center_vertical"
                android:textAppearance="@style/MyListItemTextAppearance"
                android:textColor="@color/colorAccent"
                android:layout_weight="3"
                />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:textColor="@color/colorAccent"
                android:text="@string/friend_connected"
                />
        </LinearLayout>
    </GridLayout>

    <TextView
        android:id="@+id/description_t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/friends_tutorial"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead.Inverse"
        android:layout_weight="1"
        android:contentDescription="@string/friend_click_t2"
        android:nextFocusDown="@id/tutorial_back_button"
        />

    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/fab_margin"
        >

        <Button
            android:id="@+id/tutorial_back_button"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/activity_horizontal_centered_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_centered_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/back"
            android:nextFocusDown="@id/tutorial_ok_button"
            android:contentDescription="@string/back"
            />

        <Button
            android:id="@+id/tutorial_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/activity_horizontal_centered_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_centered_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/ok"
            android:contentDescription="@string/ok"
            android:nextFocusDown="@+id/steps_t2"
            />

    </android.support.v7.widget.ButtonBarLayout>

    <LinearLayout
        android:id="@+id/steps_t2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/two_of_three"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/circle_empty"
            android:focusable="false"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/circle"
            android:layout_margin="@dimen/fab_margin"
            android:focusable="false"
            />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_empty"
            android:focusable="false"
            android:layout_margin="@dimen/fab_margin"
            />
    </LinearLayout>
</LinearLayout>
