<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimaryDarkTransparent"
    android:orientation="vertical"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        style="@style/TextAppearance.AppCompat.Title.Inverse"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/title_finding_friend"
        android:id="@+id/title_t3"
        android:nextFocusDown="@+id/description_t3"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        style="@style/TextAppearance.AppCompat.Subhead.Inverse"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/orientation_tutorial"
        android:id="@+id/description_t3"
        android:nextFocusDown="@+id/arrow_t3"
        />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/pointer"
        android:layout_gravity="center"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_marginStart="@dimen/arrow_margin"
        android:layout_marginEnd="@dimen/arrow_margin"
        android:id="@+id/arrow_t3"
        android:nextFocusDown="@id/tutorial_back_button"
        android:contentDescription="@string/arrow_t2"
        />
    <android.support.v7.widget.ButtonBarLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/tutorial_back_button"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/activity_horizontal_centered_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_centered_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/back"
            android:nextFocusDown="@id/tutorial_ok_button"
            />

        <Button
            android:id="@+id/tutorial_ok_button"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/activity_horizontal_centered_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_centered_margin"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="@string/done"
            android:nextFocusDown="@+id/steps_t3"
            />

    </android.support.v7.widget.ButtonBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/steps_t3"
        android:contentDescription="@string/three_of_three"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/circle_empty"
            android:focusable="false"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/circle_empty"
            android:layout_margin="@dimen/fab_margin"
            android:focusable="false"
            />
        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/circle"
            android:layout_margin="@dimen/fab_margin"
            android:focusable="false"
            />
    </LinearLayout>
</LinearLayout>
