<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dlujanapps.mx.wary.fragments.HistoryFragment"
    android:id="@+id/history_list_wrapper"
    android:theme="@style/WaryTheme"
    android:layout_marginTop="?actionBarSize"
    >
    <android.support.v7.widget.RecyclerView
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/history_recycler_view"
        android:name="dlujanapps.mx.wary.fragments.HistoryFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/fragment_history_item"
        android:background="@color/colorBackground"
        android:contentDescription="@string/history_cd"
        />

    <RelativeLayout
        android:id="@+id/history_emptyView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        >
        <TextView
            android:id="@+id/no_history"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_empty_summary"
            />
        <Button
            android:id="@+id/history_add_friends_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/no_history"
            android:layout_centerHorizontal="true"
            android:text="@string/title_add_friends"
            style="@style/Widget.AppCompat.Button.Borderless"
            />
    </RelativeLayout>
</FrameLayout>
